# tickr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.yaml  go.mod
.github/workflows/: build.yml  release.yml
cmd/tickr/: interactive.go  main.go
internal/app/: diff.go  fetch.go  filter.go  watch.go
internal/config/: config.go
internal/exchange/: binance.go  bingx.go  bybit.go  exchange.go  mexc.go
internal/httpx/: client.go
internal/model/: category.go  symbol.go
internal/notify/: telegram.go
internal/output/: output.go
internal/tv/: tradingview.go
scripts/: build-all.sh
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/electron/: main.ts  preload.ts  tsconfig.json
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
